--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -64,3 +64,29 @@
 	padding: 10px;
 	z-index: 1000;
 }
+
+.profile-photo {
+	width: 75px;
+	height: 75px;
+	border-radius: 50%;
+}
+
+.box {
+	display: inline-block;
+}
+
+.count {
+	display: block;
+	color: rgb(0, 0, 0);
+	font-weight: 600;
+	text-align: center;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
+
+.title {
+	font-size: 14px;
+	text-align: center;
+	font-weight: 400;
+	color: rgb(115, 115, 115);
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
