--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -38,10 +38,6 @@
 	border-radius: 6px;
 }
 
-.button-text {
-	font-weight: bold;
-}
-
 .card-content {
 	padding: 10px;
 }
@@ -89,4 +85,21 @@
 	font-weight: 400;
 	color: rgb(115, 115, 115);
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
+
+.username {
+	display: block;
+	font-weight: 400;
+	color: rgb(0, 0, 0);
+	font-size: 20px;
+}
+
+.button-text {
+	display: inline-block;
+	font-weight: 600;
+	font-size: 14px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+	color: rgb(0, 0, 0);
+	margin-left: 0;
+	text-align: center;
 }
