show posts on card

--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -107,3 +107,7 @@
 .button-solid {
 	--box-shadow: 'none !important';
 }
+
+.post-card {
+	box-shadow: 6px 7px 18px 1px rgba(199, 173, 199, 0.83);
+}
