--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -110,3 +110,15 @@
 .post-card {
 	box-shadow: 6px 7px 18px 1px rgba(199, 173, 199, 0.83);
 }
+
+ion-popover {
+	--background: 'transparent';
+}
+
+ion-popover ion-card {
+	text-align: center;
+	color: #000;
+	border-radius: 1rem;
+	background: hsla(0, 0%, 100%, 0.8901960784);
+	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.7411764706);
+}
