--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -122,3 +122,7 @@ ion-popover ion-card {
 	background: hsla(0, 0%, 100%, 0.8901960784);
 	box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.7411764706);
 }
+
+.link-card {
+	--background: #fff;
+}
