--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -126,3 +126,22 @@ ion-popover ion-card {
 .link-card {
 	--background: #fff;
 }
+
+.animated-dot {
+	width: 20px;
+	height: 20px;
+	background-color: #ff5733;
+	border-radius: 50%;
+	animation: pulse 1s infinite alternate;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(1);
+		opacity: 0.7;
+	}
+	100% {
+		transform: scale(1.2);
+		opacity: 1;
+	}
+}
