--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -128,20 +128,14 @@ ion-popover ion-card {
 }
 
 .animated-dot {
-	width: 20px;
-	height: 20px;
-	background-color: #ff5733;
-	border-radius: 50%;
-	animation: pulse 1s infinite alternate;
+	background-color: rgb(255 255 255 / 1);
+	animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
-@keyframes pulse {
-	0% {
-		transform: scale(1);
-		opacity: 0.7;
-	}
+@keyframes ping {
+	75%,
 	100% {
-		transform: scale(1.2);
-		opacity: 1;
+		transform: scale(2);
+		opacity: 0;
 	}
 }
