--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -32,7 +32,9 @@
 
 .ion-input {
 	background-color: #fff;
-	color: grey;
+	color: black;
+	border: 1px solid black;
+	border-radius: 5px;
 	height: 5vh;
 	line-height: 5vh;
 	vertical-align: middle;
